--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,12 @@
 .App {
   text-align: left;
-  margin-left: 40px;
 }
-
 
 .App-header {
   display: flex;
   flex-direction: column;
   align-items: left;
   justify-content: center;
-
 }
 
 .App-list {
@@ -22,18 +19,22 @@
 
 .App-list__box {
   overflow: hidden;
-  min-height: 300px;
+  min-height: 220px;
   background-color: #FFF;
   width: 21%;
   float: left;
   margin: 2%;
   box-sizing: border-box;
-  box-shadow: 1px 1px 5px rgba(0,0,0, .5);
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
   padding: 10px;
+  border-radius: 4px;
 }
+
 .App-list__persona {
   width: 100%;
   text-align: center;
+  min-height: 100px;
+  border: 1px solid;
 }
 
 .App-list__image {
@@ -42,6 +43,33 @@
   border-radius: 50%;
 }
 
-.App-list__content{
+.App-list__content {
   margin-top: 20px;
+}
+
+.App-list__content-card {
+  background-color: #cbcbcb;
+  padding:10px;
+}
+
+.App-list__content-informations {
+  overflow: hidden;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.App-list__title {
+  margin-right: 10px;
+}
+
+@media screen and (max-width: 800px) {
+  .App-list__box{
+    width: 29%;
+  }
+}
+@media screen and (max-width: 650px) {
+  .App-list__box{
+    width: 46%;
+    font-size: 10px;
+  }
 }
